# Hieroglyphic

./: .gitignore  Cargo.toml  Hieroglyphic.doap  README.md  build.rs  build_old.rs  meson.build  tex-match.doap  update-translations.sh
.github/workflows/: ci.yml  release.yml
IconGenerator/: applyTranslations.js
build-aux/: fyi.zoey.TeX-Match.Devel.json  fyi.zoey.TeX-Match.json  io.github.finefindus.Hieroglyphic.Devel.json  io.github.finefindus.Hieroglyphic.json
data/: fyi.zoey.TeX-Match.desktop.in.in  fyi.zoey.TeX-Match.gschema.xml.in  fyi.zoey.TeX-Match.metainfo.xml.in.in  io.github.finefindus.Hieroglyphic.desktop.in.in  io.github.finefindus.Hieroglyphic.gschema.xml.in  io.github.finefindus.Hieroglyphic.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: contribution-dialog.ui  drawing-area.ui  symbol-item.ui  window.ui
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES.in  POTFILES.skip  bg.po  cs.po  de.po  es.po  eu.po  fa.po  fi.po  fr.po  he.po  hi.po  hieroglyphic.pot  hr.po  hu.po  it.po  ka.po  nb.po  nl.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
scripts/: generate_icons.py  prepare_data.py  train.ipynb
src/: about_window.rs  application.rs  config.rs  indicator_button.rs  main.rs  symbol_item.rs  window.rs
src/classify/: classifier.rs  mod.rs  point.rs  rect.rs  stroke.rs  symbol.rs
src/widgets/: about.rs  drawing_area.rs  indicator_button.rs  mod.rs  symbol_item.rs
usr/share/applications/: io.github.finefindus.Hieroglyphic.desktop
usr/share/glib-2.0/schemas/: io.github.finefindus.Hieroglyphic.gschema.xml
usr/share/hieroglyphic/: resources.gresource
usr/share/locale/de/LC_MESSAGES/: hieroglyphic.mo
usr/share/locale/fr/LC_MESSAGES/: hieroglyphic.mo
usr/share/locale/hu/LC_MESSAGES/: hieroglyphic.mo
usr/share/locale/it/LC_MESSAGES/: hieroglyphic.mo
usr/share/locale/nb/LC_MESSAGES/: hieroglyphic.mo
usr/share/metainfo/: io.github.finefindus.Hieroglyphic.metainfo.xml
