[package]
name = "hieroglyphic"
version = "1.1.0"
authors = ["FineFindus <FineFindus@proton.me>"]
edition = "2021"
description = """Search through over 1000 different LaTeX symbols by sketching"""
license = "GPL-3.0"
repository = "https://github.com/FineFindus/tex-match/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# GTK
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
tracing = "0.1"
tracing-subscriber = "0.3"
gdk-pixbuf = "0.20"
pango = "0.20"
cairo-rs = "0.20"
itertools = "0.13"
async-channel = "2.2"
tract-onnx = "0.21.6"
base64 = "0.22.1"
phf = "0.11"

[build-dependencies]
phf_codegen = "0.11"
yaml-rust2 = "0.8.1"
base64 = "0.22.1"
