[package]
name = "hieroglyphic"
version = "2.1.0"
authors = ["FineFindus <FineFindus@proton.me>"]
edition = "2021"
description = """Find LaTeX symbols"""
license = "GPL-3.0"
repository = "https://github.com/FineFindus/Hieroglyphic"

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
tracing = "0.1"
tracing-subscriber = "0.3"
itertools = "0.14"
async-channel = "2.2"
tract-onnx = "0.21"
base64 = "0.22"
phf = "0.11"
ureq = { version = "3.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gio = { version = "0.20", features = ["v2_70"] }

[build-dependencies]
phf_codegen = "0.11"
yaml-rust2 = "0.9"
base64 = "0.22"
